@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Cakes {
        - type_of_cake : String
        + getType_of_cake()
        + good_staff()
        + setType_of_cake()
        + show_info()
        ~ Cakes()
        ~ Cakes()
    }
  }
  

  namespace com.company {
    class com.company.Eclock {
        - display_diagonal : double
        + getDisplay_diagonal()
        + good_staff()
        + setDisplay_diagonal()
        + show_info()
        ~ Eclock()
        ~ Eclock()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Mechanic {
        {static} ~ launchMenu()
    }
  }
  

  namespace com.company {
    abstract class com.company.Tovar {
        - article_number : String
        - name : String
        - price : int
        + getArticle_number()
        + getName()
        + getPrice()
        {abstract} + good_staff()
        + setArticle_number()
        + setName()
        + setPrice()
        + setTovar()
        + show_info()
        ~ Tovar()
        ~ Tovar()
    }
  }
  

  namespace com.company {
    class com.company.Working {
        {static} # change_the_Product()
        {static} # cheapest_thing()
        {static} # enter_the_Product()
        {static} # show_all_products()
        {static} - creat_Product_Cakes()
        {static} - creat_Product_Eclock()
        {static} - set_plus_cakes()
        {static} - set_plus_eclocks()
    }
  }
  

  com.company.Cakes -up-|> com.company.Tovar
  com.company.Eclock -up-|> com.company.Tovar
  com.company.Main -up-|> com.company.Mechanic
  com.company.Mechanic -up-|> com.company.Working


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
